# dns

./: Cargo.toml
.github/workflows/: ci.yml
src/: cache.rs  config.rs  main.rs  metrics.rs  proto.rs  resolve.rs  state.rs  upstream.rs
src/frontend/: mod.rs  tcp.rs  udp.rs
src/http/: mod.rs
src/upstream/: https.rs  udp.rs
