[package]
name = "rust-dns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
futures = "0.3.30"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
tokio = { version = "1.36.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
reqwest = { version = "0.11.24", features = ["rustls-tls-webpki-roots"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
parking_lot = "0.12.1"
