[package]
name = "rdns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
futures = "0.3.30"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
tokio = { version = "1.36.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
reqwest = { version = "0.12.7", default-features = false, features = ["http2", "rustls-tls-webpki-roots"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
parking_lot = "0.12.1"
hyper = { version = "1.1.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
http-body-util = "0.1.0"
ahash = { version = "0.8.11", default-features = false, features = ["std", "runtime-rng"] }
memchr = "2.7.4"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1
